--- a/app/src/main/res/layout/product.xml
+++ b/app/src/main/res/layout/product.xml
@@ -20,8 +20,13 @@
                 android:layout_width="@dimen/sixty"
                 android:layout_height="@dimen/hundred"
                 android:layout_centerVertical="true"
-                android:layout_margin="@dimen/ten"
-                android:scaleType="fitXY"
+                android:layout_marginStart="@dimen/ten"
+                android:layout_marginLeft="@dimen/ten"
+                android:layout_marginTop="@dimen/ten"
+                android:layout_marginEnd="@dimen/ten"
+                android:layout_marginRight="@dimen/ten"
+                android:layout_marginBottom="@dimen/ten"
+                android:scaleType="centerInside"
                 android:src="@drawable/photo"></ImageView>
 
             <LinearLayout
