--- a/app/src/main/res/layout/activity_otp_verification.xml
+++ b/app/src/main/res/layout/activity_otp_verification.xml
@@ -96,12 +96,12 @@
                 android:id="@+id/text_resend"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/ten"
+                android:layout_toLeftOf="@+id/text_timer"
+                android:fontFamily="@font/poppins_regular"
                 android:text="Resend Code:"
                 android:textColor="@color/black"
-                android:layout_marginRight="@dimen/ten"
-                android:textSize="@dimen/textsize"
-                android:layout_toLeftOf="@+id/text_timer"
-                android:fontFamily="@font/poppins_regular"></TextView>
+                android:textSize="@dimen/textsize"></TextView>
 
             <TextView
                 android:id="@+id/text_timer"
