--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
 <domain-config cleartextTrafficPermitted="true">
-    <domain includeSubdomains="true">kisan.aimplatfarm.com</domain>
+    <domain includeSubdomains="true">kisaanandfactory.com</domain>
 </domain-config>
 </network-security-config>
