--- a/app/src/main/res/layout/activity_user_register.xml
+++ b/app/src/main/res/layout/activity_user_register.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -51,207 +50,216 @@
 
     </ImageView>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/backArrow"
-        android:orientation="vertical"
-        android:layout_margin="@dimen/thirty">
+        android:layout_below="@id/backArrow">
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Full Name"
-            android:fontFamily="@font/poppins_regular"
-            android:textColor="@color/black"
-            android:textSize="@dimen/edittextsize">
 
-        </TextView>
-
-        <EditText
-            android:id="@+id/edit_UserName"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/fifty"
-            android:layout_marginTop="@dimen/five"
-            android:layout_weight="1"
-            android:background="@drawable/edittextback"
-            android:drawablePadding="@dimen/twenty"
-            android:ems="10"
-            android:hint="Name"
-            android:imeOptions="actionDone"
-            android:inputType="text"
-            android:paddingLeft="20dp"
-            android:textColor="#000000"
-            android:textSize="@dimen/edittextsize"
-            android:textStyle="normal" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Mobile Number *"
-            android:fontFamily="@font/poppins_regular"
-            android:textColor="@color/black"
-            android:textSize="@dimen/edittextsize"
-            android:layout_marginTop="@dimen/fifteen">
-
-        </TextView>
-
-        <EditText
-            android:id="@+id/edit_MobileNumber"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/fifty"
-            android:layout_marginTop="@dimen/five"
-            android:layout_weight="1"
-            android:background="@drawable/edittextback"
-            android:drawablePadding="@dimen/twenty"
-            android:ems="10"
-            android:hint="Enter Your Mobile No"
-            android:imeOptions="actionDone"
-            android:inputType="phone"
-            android:paddingLeft="@dimen/eighteen"
-            android:textColor="#000000"
-            android:textSize="@dimen/edittextsize"
-            android:textStyle="normal" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="E-mail"
-            android:fontFamily="@font/poppins_regular"
-            android:textColor="@color/black"
-            android:textSize="@dimen/edittextsize"
-            android:layout_marginTop="@dimen/fifteen">
-
-        </TextView>
-
-        <EditText
-            android:id="@+id/edit_EMail"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/fifty"
-            android:layout_marginTop="@dimen/five"
-            android:layout_weight="1"
-            android:background="@drawable/edittextback"
-            android:drawablePadding="@dimen/twenty"
-            android:ems="10"
-            android:hint="Enter Your Email"
-            android:imeOptions="actionDone"
-            android:inputType="textEmailAddress"
-            android:paddingLeft="@dimen/eighteen"
-            android:textColor="#000000"
-            android:textSize="@dimen/edittextsize"
-            android:textStyle="normal" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Create Password"
-            android:fontFamily="@font/poppins_regular"
-            android:textColor="@color/black"
-            android:textSize="@dimen/edittextsize"
-            android:layout_marginTop="@dimen/fifteen">
-
-        </TextView>
-
-        <EditText
-            android:id="@+id/edit_Password"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/fifty"
-            android:layout_marginTop="@dimen/five"
-            android:layout_weight="1"
-            android:background="@drawable/edittextback"
-            android:drawablePadding="@dimen/twenty"
-            android:ems="10"
-            android:hint="Enter Your Password"
-            android:imeOptions="actionDone"
-            android:inputType="textPassword"
-            android:paddingLeft="@dimen/eighteen"
-            android:textColor="#000000"
-            android:textSize="@dimen/edittextsize"
-            android:textStyle="normal" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Confirm Password"
-            android:fontFamily="@font/poppins_regular"
-            android:textColor="@color/black"
-            android:textSize="@dimen/edittextsize"
-            android:layout_marginTop="@dimen/fifteen">
-
-        </TextView>
-
-        <EditText
-            android:id="@+id/edit_ConfirmPassword"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/fifty"
-            android:layout_marginTop="@dimen/five"
-            android:layout_weight="1"
-            android:background="@drawable/edittextback"
-            android:drawablePadding="@dimen/twenty"
-            android:ems="10"
-            android:hint="Enter Your ConfirmPassword"
-            android:imeOptions="actionDone"
-            android:inputType="textPassword"
-            android:paddingLeft="@dimen/eighteen"
-            android:textColor="#000000"
-            android:textSize="@dimen/edittextsize"
-            android:textStyle="normal" />
-
-       <!-- <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="* Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
-            android:textColor="#040404"
-            android:textSize="13sp" />-->
-
-
-        <Button
-            android:id="@+id/btn_CreateAccount"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/twenty"
-            android:background="@drawable/button_back"
-            android:text="Create My Account"
-            android:textColor="@color/white"
-            android:fontFamily="@font/poppins_semibold"
-            android:textSize="@dimen/edittextsize"></Button>
-
-        <RelativeLayout
-            android:id="@+id/r"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/fifteen"
-            android:layout_gravity="center">
+            android:layout_margin="@dimen/thirty"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/police"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/five"
-                android:text="I already have an account ?"
-                android:textSize="@dimen/textsize"
-                android:textColor="#000000"
-                android:fontFamily="@font/poppins_regular">
+                android:fontFamily="@font/poppins_regular"
+                android:text="Full Name"
+                android:textColor="@color/black"
+                android:textSize="@dimen/edittextsize">
 
             </TextView>
 
+            <EditText
+                android:id="@+id/edit_UserName"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/fifty"
+                android:layout_marginTop="@dimen/five"
+                android:layout_weight="1"
+                android:background="@drawable/edittextback"
+                android:drawablePadding="@dimen/twenty"
+                android:ems="10"
+                android:hint="Name"
+                android:imeOptions="actionDone"
+                android:inputType="text"
+                android:paddingLeft="20dp"
+                android:textColor="#000000"
+                android:textSize="@dimen/edittextsize"
+                android:textStyle="normal" />
 
             <TextView
-                android:id="@+id/text_LoginPage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/fifteen"
+                android:fontFamily="@font/poppins_regular"
+                android:text="Mobile Number *"
+                android:textColor="@color/black"
+                android:textSize="@dimen/edittextsize">
+
+            </TextView>
+
+            <EditText
+                android:id="@+id/edit_MobileNumber"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/fifty"
+                android:layout_marginTop="@dimen/five"
+                android:layout_weight="1"
+                android:background="@drawable/edittextback"
+                android:drawablePadding="@dimen/twenty"
+                android:ems="10"
+                android:hint="Enter Your Mobile No"
+                android:imeOptions="actionDone"
+                android:inputType="phone"
+                android:paddingLeft="@dimen/eighteen"
+                android:textColor="#000000"
+                android:textSize="@dimen/edittextsize"
+                android:textStyle="normal" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/fifteen"
+                android:fontFamily="@font/poppins_regular"
+                android:text="E-mail"
+                android:textColor="@color/black"
+                android:textSize="@dimen/edittextsize">
+
+            </TextView>
+
+            <EditText
+                android:id="@+id/edit_EMail"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/fifty"
+                android:layout_marginTop="@dimen/five"
+                android:layout_weight="1"
+                android:background="@drawable/edittextback"
+                android:drawablePadding="@dimen/twenty"
+                android:ems="10"
+                android:hint="Enter Your Email"
+                android:imeOptions="actionDone"
+                android:inputType="textEmailAddress"
+                android:paddingLeft="@dimen/eighteen"
+                android:textColor="#000000"
+                android:textSize="@dimen/edittextsize"
+                android:textStyle="normal" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/fifteen"
+                android:fontFamily="@font/poppins_regular"
+                android:text="Create Password"
+                android:textColor="@color/black"
+                android:textSize="@dimen/edittextsize">
+
+            </TextView>
+
+            <EditText
+                android:id="@+id/edit_Password"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/fifty"
+                android:layout_marginTop="@dimen/five"
+                android:layout_weight="1"
+                android:background="@drawable/edittextback"
+                android:drawablePadding="@dimen/twenty"
+                android:ems="10"
+                android:hint="Enter Your Password"
+                android:imeOptions="actionDone"
+                android:inputType="textPassword"
+                android:paddingLeft="@dimen/eighteen"
+                android:textColor="#000000"
+                android:textSize="@dimen/edittextsize"
+                android:textStyle="normal" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/fifteen"
+                android:fontFamily="@font/poppins_regular"
+                android:text="Confirm Password"
+                android:textColor="@color/black"
+                android:textSize="@dimen/edittextsize">
+
+            </TextView>
+
+            <EditText
+                android:id="@+id/edit_ConfirmPassword"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/fifty"
+                android:layout_marginTop="@dimen/five"
+                android:layout_weight="1"
+                android:background="@drawable/edittextback"
+                android:drawablePadding="@dimen/twenty"
+                android:ems="10"
+                android:hint="Enter Your ConfirmPassword"
+                android:imeOptions="actionDone"
+                android:inputType="textPassword"
+                android:paddingLeft="@dimen/eighteen"
+                android:textColor="#000000"
+                android:textSize="@dimen/edittextsize"
+                android:textStyle="normal" />
+
+            <!-- <TextView
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:text="* Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
+                 android:textColor="#040404"
+                 android:textSize="13sp" />-->
+
+
+            <Button
+                android:id="@+id/btn_CreateAccount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/twenty"
+                android:background="@drawable/button_back"
+                android:fontFamily="@font/poppins_semibold"
+                android:text="Create My Account"
+                android:textColor="@color/white"
+                android:textSize="@dimen/edittextsize"></Button>
+
+            <RelativeLayout
+                android:id="@+id/r"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/police"
-                android:text=" Log In"
-                android:layout_marginTop="@dimen/five"
-                android:textColor="#0A22A1"
-                android:textSize="@dimen/textsize"
-                android:textStyle="bold"
-                android:fontFamily="@font/poppins_regular"/>
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/fifteen">
 
-        </RelativeLayout>
+                <TextView
+                    android:id="@+id/police"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/five"
+                    android:fontFamily="@font/poppins_regular"
+                    android:text="I already have an account ?"
+                    android:textColor="#000000"
+                    android:textSize="@dimen/textsize">
+
+                </TextView>
 
 
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/text_LoginPage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/five"
+                    android:layout_toRightOf="@id/police"
+                    android:fontFamily="@font/poppins_regular"
+                    android:text=" Log In"
+                    android:textColor="#0A22A1"
+                    android:textSize="@dimen/textsize"
+                    android:textStyle="bold"/>
+
+            </RelativeLayout>
+
+
+        </LinearLayout>
+
+    </ScrollView>
+
+
 
 </RelativeLayout>
