--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,11 @@
     <color name="some_color">#22647E</color>
     <color name="some_color1">#909197</color>
     <color name="textcol">#FF4A4A4A</color>
+
+    <color name="colorPrimary">#0A22A1</color>
+    <color name="colorPrimaryDark">#0A22A1</color>
+    <color name="colorAccent">#173F67</color>
+    <color name="colorGreenDark">#275800</color>
+
+
 </resources>
