--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -67,4 +67,10 @@
         <item name="android:textColor">#FFFFFF</item>
     </style>
 
+    <style name="product_nam">
+        <item name="android:textSize">@dimen/fourteen</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:fontFamily">@font/poppins_bold</item>
+    </style>
+
 </resources>
